--- a/src/styles/thankslinks.css
+++ b/src/styles/thankslinks.css
@@ -1,5 +1,14 @@
-.container {
+.flex-container {
 	display: flex;
 	flex-direction: row;
-  justify-content: space-between;
+	justify-content: space-between;
+}
+
+.flex-child {
+	flex: 1;
+  text-align: left;
+}
+
+.flex-child:first-child {
+	margin-right: 200px;
 }
